--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,6 @@
 	<packaging>pom</packaging>
 	<name>sfg-pet-clininc</name>
 	<description>SFG Pet Clinic Project</description>
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
 	<dependencies>		
 
 		
@@ -36,8 +33,20 @@
 					</excludes>
 				</configuration>
 			</plugin>
-		</plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+				</configuration>
+			</plugin>
+		</plugins>		
+		
 	</build>
+	
+	<scm>
+			<developerConnection>scm:git:https://github.com/emad-sfc/sfg-pet-clinic.git</developerConnection>
+	</scm>
 
 	<modules>
 		<module>pet-clinic-data</module>
