--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>emad.springframework</groupId>
     <artifactId>sfg-pet-clininc</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
   </parent>
   <artifactId>pet-clinic-data</artifactId>
   
