--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>emad.springframework</groupId>
     <artifactId>sfg-pet-clininc</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
   </parent>
   <artifactId>pet-clinic-web</artifactId>
   
@@ -16,7 +16,7 @@
   	<dependency>
   	   	<groupId>emad.springframework</groupId>
   	  	<artifactId>pet-clinic-data</artifactId>
-   		 <version>0.0.2</version>
+   		 <version>0.0.3-SNAPSHOT</version>
   	</dependency>
   	
   	<dependency>
