--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>emad.springframework</groupId>
 	<artifactId>sfg-pet-clininc</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>sfg-pet-clininc</name>
 	<description>SFG Pet Clinic Project</description>
@@ -46,7 +46,7 @@
 	
 	<scm>
 			<developerConnection>scm:git:https://github.com/emad-sfc/sfg-pet-clinic.git</developerConnection>
-	  <tag>sfg-pet-clininc-0.0.2</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<modules>
